jenkins/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  selector:
    app: jenkins-server
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32000
