jenkins/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "jenkins-session"
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.local
    http:
      paths:
      - backend:
          service:
            name: jenkins-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
